@@ -360,6 +360,7 @@ a.stats_link.missing span	{color:#008FFF;}
 	============================================= */
 .status_wrap			{margin:0 auto; margin-bottom:25px;}
 .status_button_wrap		{display:flex; width:960px; margin:0 auto; flex-wrap:wrap; justify-content:center; gap:14px; margin-bottom:12px;}
+.status_today_wrap		{display:flex; width:717px; justify-content:space-between;}
 .status_grid			{display:grid; grid-template-columns:56% 42%; overflow:hidden; width:960px; margin:0 auto; margin-bottom:15px; grid-template-rows:[row1] 140px [row2] 72px [row3]; grid-column-gap:14px; grid-row-gap:8px;}
 .status_pipeline		{grid-row-start:row1; grid-row-end:row3; display:flex;}
 .status_publisher		{grid-column-start:2; grid-row-start:row1; grid-row-end:row2;}
@@ -372,6 +373,13 @@ a.stats_link.missing span	{color:#008FFF;}
 .status_button_wrap a	{flex-basis:189px; padding:20px 20px; margin:0; height:initial; font-size:18px;}
 .status_button_wrap a span,
 .status_total a span	{color:#008FFF;}
+.status_today_wrap a	{flex-basis:257px; text-align:center;}
+
+a.stats_link.to_ended	{border-radius:6px 0 0 6px; background:linear-gradient(to right, rgba(0,14,32,0) 0%, rgba(0,14,32,0.5) 12%, rgba(0,14,32,0.7) 100%);}
+a.stats_link.to_active	{border-radius:0;}
+a.stats_link.to_planned	{border-radius:0 6px 6px 0; background:linear-gradient(to left, rgba(0,14,32,0) 0%, rgba(0,14,32,0.5) 12%, rgba(0,14,32,0.7) 100%);}
+a.stats_link.to_ended:hover		{border-radius:6px 0 0 6px; background:linear-gradient(to right, rgba(0,14,32,0.1) 0%, rgba(0,14,32,0.7) 12%, rgba(0,14,32,0.9) 100%);}
+a.stats_link.to_planned:hover	{border-radius:0 6px 6px 0; background:linear-gradient(to left, rgba(0,14,32,0.1) 0%, rgba(0,14,32,0.7) 12%, rgba(0,14,32,0.9) 100%);}
 
 
 /*	Active / Ended projects styles
@@ -380,6 +388,7 @@ a.stats_link.missing span	{color:#008FFF;}
 .title_wrap				{width:960px; margin:0 auto; padding:0 0 40px 0; margin-bottom:40px;}
 .table_wrap				{background-color:rgba(0,14,32,0.85); padding:0; border-radius:8px 8px 0 0; position:relative; width:960px;}
 .table_wrap.main		{padding-bottom:0; border-radius:8px 8px 0 0;}
+.table_wrap.act_stats	{border-radius:8px;}
 .table_wrap.view		{width:1000px; margin:0 auto; padding:20px; margin-bottom:40px; box-sizing:border-box;}
 .auto					{margin:0 auto;}
 
@@ -944,8 +953,12 @@ a.beige:hover			{color:#FFF;}
 .related_pivot:hover	{background:rgba(75,70,6,0.95); border:1px solid #ff0;}
 .related_item .num		{display:none;}
 .related_item .title	{width:60%; font-size:20px; line-height:22px;}
+.relatedp_item .title	{width:100%;}
+.relatedp_item .related_title	{max-width:70%;}
+.relatedp_item .related_span	{margin:0;}
+.relatedp_item .percent			{display:flex; justify-content:space-between; align-items:center;}
 
-.related_item span		{font-size:14px; line-height:16px; display:block;}
+.related_item span					{font-size:14px; line-height:16px; display:block;}
 .related_item span.currency			{font-size:11px;}
 .related_item span.related_aid,
 .related_item span.related_org		{padding:10px; border-radius:6px; background:#333642;}
