@@ -119,12 +119,12 @@
 
 #relatedp_item
 
-<div id="related_{_it.idx}" class="{_it.pivot} related_item" onclick="event.stopPropagation();ctrack.url('#view=related&pid={_it.pid}');">
+<div id="related_{_it.idx}" class="{_it.pivot} related_item relatedp_item" onclick="event.stopPropagation();ctrack.url('#view=related&pid={_it.pid}');">
 	<div class="related_item_before related_item_before{_it.lcount}">{_it.lcount}</div>
 	<div class="related_info">
 		<div class="num">{_it.idx}.</div>
 		<div class="title">
-			<a class="percent">
+			<a class="percent relatedp_info">
 				<div class="related_title">{_it.title}</div>
 				<div class="related_span">
 					<span class="related_org" onclick="event.stopPropagation();ctrack.url('?&reporting_ref={_it.pid}#view=main');">{_it.pid}</span>
