@@ -1,3 +1,9 @@
+Development Portal (2025-02-18 shi)
+==============================
+Update new stats table css
+Update publisher stream css
+
+
 Development Portal (2025-02-16 shi)
 ==============================
 Add stream numbers
